Bugs with header bar fixed(transition from visible to invisible wasn't okey, header on load bug when invisible, in author's page staff picked is not checked

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -604,7 +604,8 @@ margin-right:8px;}
 }
 .i-caret
 {
-    background-position: 0px -269px;         
+    background-position: -27px -269px;  
+    /*background-position: 0px -269px;         */
 }
 .i-facebook-l
 {
